[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scripts/VictoryScene.gd" id="1_vic"]
[ext_resource type="Texture2D" path="res://Assets/vita_forest_bg.png" id="2_bg"]
[ext_resource type="PackedScene" path="res://Scenes/DialogueSystem.tscn" id="3_diag"]

[node name="VictoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vic")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="SpiritSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -200.0
offset_right = -110.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="HeroSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -200.0
offset_right = 560.0
offset_bottom = 300.0
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LifeCoreSprite" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DialogueSystem" parent="." instance=ExtResource("3_diag")]
visible = false
